   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
      - Fixed usage of custom Component with ServerServlet (issue #926).
        Reported by Graham Smith.
      - StatusService didn't copy the contactEmail and homeRef property
	    to the internal serialized status object.
      - JacksonRepresentation fields are now thread safe.
	    Reported by Tim Peierls.

- 2.3 Release Candidate 2 (12/08/2014)
    - Bugs fixed
      - Restored HTML variant of error status representations returned by default.
        Now handled by the ConverterService via a StatusInfoHtmlConverter in engine.
      - Fixed bug in OData extension when looping through a multi pages collection.
        Reported by Vishnu Perabathini.

    - Deprecations
      - Deprecated org.restlet.Component XML configuration.
        Usage of XML support in Spring extension is recommended instead.
      - Deprecated e4 extension.
        Usage of Guice or Spring extensions is recommended instead.
      - Deprecated JDBC extension. 
        Use a persistence technology such as Mybatis or Hibernate instead.
      - Deprecated JiBX and XStream extensions.
        Use an XML serialization technology such as Jackson instead.
      - Deprecated jSSLUtils, ROME, XDB extensions.
        Libraries not actively developed anymore.
      - Deprecated Apache HTTP Client and Simple extensions.
        Will be removed to favor lower-level network extensions such as
        Jetty and Netty, allowing more control at the Restlet API level. 
      - Deprecated SIP, WebDAV extensions.
        Will be removed to focus on Web APIs.
        
    - Misc
      - Removed the Tanuki's Java Service Wrapper library.
      - Removed the CDDL and LGPL licences, kept Apache License, Version 2.0 and
        Eclipse Public License -v 1.0.

- 2.3 Release Candidate 1 (11/21/2014)
    - Enhancements
      - Upgraded Jetty to version 9.2.4
      - Added support for SPDY via the Jetty extension.