@@ -18,6 +18,7 @@
 		<files-sets>
 <![CDATA[
          <exclude name="src/com/**" />
+         <exclude name="src/org/restlet/engine/connector/HttpExchangeCall*" />
          <exclude name="src/org/restlet/engine/connector/HttpServerHelper*" />
          <exclude name="src/org/restlet/engine/connector/HttpsServerHelper*" />
          <exclude name="src/org/restlet/engine/connector/NetServerHelper*" />
