@@ -24,8 +24,6 @@
 
 package org.restlet.representation;
 
-import java.beans.XMLDecoder;
-import java.beans.XMLEncoder;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.ObjectInputStream;
@@ -42,19 +40,20 @@ import org.restlet.data.MediaType;
  * case, it handles representations having the following media type:
  * {@link MediaType#APPLICATION_JAVA_OBJECT}
  * ("application/x-java-serialized-object"). It also supports textual
- * representations of JavaBeans using the {@link XMLEncoder} and
- * {@link XMLDecoder} classes. In this case, it handles representations having
- * the following media type: {@link MediaType#APPLICATION_JAVA_OBJECT_XML}
+ * representations of JavaBeans using the {@link java.beans.XMLEncoder} and
+ * {@link java.beans.XMLDecoder} classes. In this case, it handles
+ * representations having the following media type:
+ * {@link MediaType#APPLICATION_JAVA_OBJECT_XML}
  * ("application/x-java-serialized-object+xml").<br>
  * <br>
- * SECURITY WARNING: The usage of {@link XMLDecoder} when deserializing XML
- * presentations from untrusted sources can lead to malicious attacks. As
- * pointed <a href=
+ * SECURITY WARNING: The usage of {@link java.beans.XMLDecoder} when
+ * deserializing XML presentations from untrusted sources can lead to malicious
+ * attacks. As pointed <a href=
  * "http://blog.diniscruz.com/2013/08/using-xmldecoder-to-execute-server-side.html"
- * >here</a>, the {@link XMLDecoder} is able to force the JVM to execute
- * unwanted Java code described inside the XML file. Thus, the support of such
- * format has been disabled by default. You can activate this support by turning
- * on the following system property:
+ * >here</a>, the {@link java.beans.XMLDecoder} is able to force the JVM to
+ * execute unwanted Java code described inside the XML file. Thus, the support
+ * of such format has been disabled by default. You can activate this support by
+ * turning on the following system property:
  * org.restlet.representation.ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED.<br>
  * <br>
  * SECURITY WARNING: The usage of {@link ObjectInputStream} when deserializing
